--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plantique</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="container header__inner">
+            <div>
+                <a href="#" class="logo">
+                    <img src="assets/images/icons/header/logo.svg" alt="logo image">
+                </a>
+                <nav>
+                    <ul class="nav__list">
+                        <li><a href="#" class="header__link header__link-active">Home</a></li>
+                        <li><a href="#" class="header__link">Contact</a></li>
+                        <li><a href="#" class="header__link">Blog</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <button class="header__search">
+                    <img src="assets/images/icons/header/search.svg" alt="search button">
+                </button>
+                <ul class="header__list">
+                    <li><a href="#" class="header__link">Shop</a></li>
+                    <li><a href="#" class="header__link">Log in</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
     <main>
         <section class="intro">
 
@@ -16,4 +42,5 @@
         </section>
     </main>
 </body>
+
 </html>
