add intro main content

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,22 @@
     <main>
         <section class="intro">
 
+            <div class="intro__content">
+                <h1>Plantique</h1>
+                <h2>
+                    gro
+                    <div>
+                        w
+                        <img src="assets/images/intro/leaf.png" alt="hover leaf">
+                    </div>
+                    th
+                </h2>
+                <p class="intro__text">
+                    We're your online houseplant destination. We offer a wide range of houseplants and accessories
+                    shipped directly from our greenhouse to yours!
+                </p>
+            </div>
+
             <div class="intro__btn">
                 <button>Shop Tropical Plants</button>
             </div>
