add plants leaves and animation

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
     <main>
         <section class="intro">
 
+            <div class="container intro__inner">
             <div class="intro__content">
                 <h1>Plantique</h1>
                 <h2>
@@ -50,6 +51,19 @@
                     We're your online houseplant destination. We offer a wide range of houseplants and accessories
                     shipped directly from our greenhouse to yours!
                 </p>
+            </div>
+
+            <div class="intro__plants">
+                <div class="intro__descr">
+                    <h4>100+ Plants</h4>
+                    <p>We want our visitors to be inspire to get their hands dirty</p>
+                </div>
+                <div class="intro__images">
+                    <img src="assets/images/intro/plants/1.jpg" alt="plant 1">
+                    <img src="assets/images/intro/plants/2.jpg" alt="plant 2">
+                    <img src="assets/images/intro/plants/3.jpg" alt="plant 3">
+                </div>
+            </div>
             </div>
 
             <div class="intro__btn">
