add tablet media queries for intro

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
 
 <body>
     <header class="header">
+        <div class="container header__mobile">
+            <a href="#" class="logo">
+                <img src="assets/images/icons/header/logo.svg" alt="logo image">
+            </a>
+        </div>
         <div class="container header__inner">
             <div>
                 <a href="#" class="logo">
@@ -37,40 +42,42 @@
         <section class="intro">
 
             <div class="container intro__inner">
-            <div class="intro__content">
-                <h1>Plantique</h1>
-                <h2>
-                    gro
-                    <div>
-                        w
-                        <img src="assets/images/intro/leaf.png" alt="hover leaf">
-                    </div>
-                    th
-                </h2>
-                <p class="intro__text">
-                    We're your online houseplant destination. We offer a wide range of houseplants and accessories
-                    shipped directly from our greenhouse to yours!
-                </p>
-            </div>
+                <div class="intro__content">
+                    <h1>Plantique</h1>
+                    <h2>
+                        gro
+                        <div>
+                            w
+                            <img src="assets/images/intro/leaf.png" alt="hover leaf">
+                        </div>
+                        th
+                    </h2>
+                    <p class="intro__text">
+                        We're your online houseplant destination. We offer a wide range of houseplants and accessories
+                        shipped directly from our greenhouse to yours!
+                    </p>
+                </div>
 
-            <div class="intro__plants">
-                <div class="intro__descr">
-                    <h4>100+ Plants</h4>
-                    <p>We want our visitors to be inspire to get their hands dirty</p>
+                <div class="intro__plants">
+                    <div class="intro__descr">
+                        <h4>100+ Plants</h4>
+                        <p>We want our visitors to be inspire to get their hands dirty</p>
+                    </div>
+                    <div class="intro__images">
+                        <img src="assets/images/intro/plants/1.jpg" alt="plant 1">
+                        <img src="assets/images/intro/plants/2.jpg" alt="plant 2">
+                        <img src="assets/images/intro/plants/3.jpg" alt="plant 3">
+                    </div>
                 </div>
-                <div class="intro__images">
-                    <img src="assets/images/intro/plants/1.jpg" alt="plant 1">
-                    <img src="assets/images/intro/plants/2.jpg" alt="plant 2">
-                    <img src="assets/images/intro/plants/3.jpg" alt="plant 3">
-                </div>
-            </div>
             </div>
 
             <div class="intro__btn">
                 <button>Shop Tropical Plants</button>
             </div>
         </section>
+        <section class="for"></section>
     </main>
+
 </body>
 
 </html>
