add adaptive header menu and animate menu appearance

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,19 @@
     <header class="header">
         <div class="container header__mobile">
             <a href="#" class="logo">
-                <img src="assets/images/icons/header/logo.svg" alt="logo image">
+                <img src="assets/images/icons/header/logo.svg" loading="lazy" alt="logo image">
             </a>
+
+            <button class="header__menu">
+                <img src="assets/images/icons/header/menu-vector.svg" alt="menu">
+                <img src="assets/images/icons/header/menu-vector.svg" alt="menu">
+                <img src="assets/images/icons/header/menu-vector.svg" alt="menu">
+            </button>
         </div>
         <div class="container header__inner">
             <div>
                 <a href="#" class="logo">
-                    <img src="assets/images/icons/header/logo.svg" alt="logo image">
+                    <img src="assets/images/icons/header/logo.svg" loading="lazy" alt="logo image">
                 </a>
                 <nav>
                     <ul class="nav__list">
@@ -29,7 +35,7 @@
             </div>
             <div>
                 <button class="header__search">
-                    <img src="assets/images/icons/header/search.svg" alt="search button">
+                    <img src="assets/images/icons/header/search.svg" loading="lazy" alt="search button">
                 </button>
                 <ul class="header__list">
                     <li><a href="#" class="header__link">Shop</a></li>
@@ -48,7 +54,7 @@
                         gro
                         <div>
                             w
-                            <img src="assets/images/intro/leaf.png" alt="hover leaf">
+                            <img src="assets/images/intro/leaf.png" loading="lazy" alt="hover leaf">
                         </div>
                         th
                     </h2>
@@ -64,13 +70,12 @@
                         <p>We want our visitors to be inspire to get their hands dirty</p>
                     </div>
                     <div class="intro__images">
-                        <img src="assets/images/intro/plants/1.jpg" alt="plant 1">
-                        <img src="assets/images/intro/plants/2.jpg" alt="plant 2">
-                        <img src="assets/images/intro/plants/3.jpg" alt="plant 3">
+                        <img src="assets/images/intro/plants/1.jpg" loading="lazy" alt="plant 1">
+                        <img src="assets/images/intro/plants/2.jpg" loading="lazy" alt="plant 2">
+                        <img src="assets/images/intro/plants/3.jpg" loading="lazy" alt="plant 3">
                     </div>
                 </div>
             </div>
-
             <div class="intro__btn">
                 <button>Shop Tropical Plants</button>
             </div>
