add tabs for species

--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,27 @@
                 </p>
             </div>
         </section>
+
+        <section class="species">
+            <div class="container species__inner">
+                <div class="species__tabs">
+                    <div class="species__filters">
+                        <button data-button="content-1" class="species__btn species__btn-active">Outdoor Plant</button>
+                        <button data-button="content-2" class="species__btn">Indoor Plant</button>
+                        <button data-button="content-3" class="species__btn">Flower Pot</button>
+                        <button data-button="content-4" class="species__btn">Potted Plant</button>
+                    </div>
+                    <button data-button="content-5" class="species__btn">See All</button>
+                </div>
+                <div class="species__contents">
+                    <div id="content-1" class="species__content species__content-active">1</div>
+                    <div id="content-2" class="species__content">2</div>
+                    <div id="content-3" class="species__content">3</div>
+                    <div id="content-4" class="species__content">4</div>
+                    <div id="content-5" class="species__content">5</div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
