--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,73 @@
                     <button data-button="content-5" class="species__btn">See All</button>
                 </div>
                 <div class="species__contents">
-                    <div id="content-1" class="species__content species__content-active">1</div>
+                    <div id="content-1" class="species__content species__content-active">
+                        <div class="species__card species__card-active">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Pet Friendly Plants</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue interdum ligula
+                                    a
+                                    dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis
+                                    orci
+                                    elementum egestas lobortis.
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>Orchids</h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    Orchids are easily everyones Favorite flowering plant, Find new orchids and orchids
+                                    success items in this collection
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                        <div class="species__card">
+                            <div>
+                                <div class="species__title">
+                                    <h3>
+                                        Succulents
+                                    </h3>
+                                    <a href="#" class="species__link">
+                                        <img src="assets/images/icons/general/arrow-to-right.svg" alt="arrow">
+                                    </a>
+                                </div>
+                                <p class="species__descr">
+                                    All Succulents are cacti, but not all cacti are succulents. Both make low maintence
+                                    house pants.
+                                </p>
+                            </div>
+                            <div class="species__footer">
+                                <button class="species__badge">
+                                    <img src="assets/images/icons/general/flower.svg" alt="flower">
+                                    Piperaceae
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                     <div id="content-2" class="species__content">2</div>
                     <div id="content-3" class="species__content">3</div>
                     <div id="content-4" class="species__content">4</div>
@@ -127,6 +193,8 @@
                 </div>
             </div>
         </section>
+
+        <section class="new"></section>
     </main>
 
 </body>
