add section new

--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,70 @@
             </div>
         </section>
 
-        <section class="new"></section>
+        <section class="new">
+            <div class="container">
+                <div class="new__content">
+                    <h2>New Plants</h2>
+                    <p>
+                        Bring nature insider and shop our big selections of fresh indoor plants including
+                        Instagram-worthy houseplants, pet-friendly plants, orchids and one-of-a-kind rare plants.
+                    </p>
+                </div>
+                <div class="new__slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide new__item">
+                            <div class="new__descr">
+                                <img src="assets/images/new/1.jpg" class="new__img" alt="Peperomia Plants">
+                                <button class="new__favorite"></button>
+                            </div>
+                            <div class="new__about">
+                                <div>
+                                    <h4 class="new__name">Peperomia Plants</h4>
+                                    <p class="new__text">Moist but well-drained</p>
+                                    <div class="new__price">₹122,056</div>
+                                </div>
+                                <a href="#" class="new__link">
+                                    <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__item">
+                            <div class="new__descr">
+                                <img src="assets/images/new/2.jpg" class="new__img" alt="Fiddle-Leaf Fig">
+                                <button class="new__favorite"></button>
+                            </div>
+                            <div class="new__about">
+                                <div>
+                                    <h4 class="new__name">Fiddle-Leaf Fig</h4>
+                                    <p class="new__text">Moist but well-drained</p>
+                                    <div class="new__price">₹162,056</div>
+                                </div>
+                                <a href="#" class="new__link">
+                                    <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__item">
+                            <div class="new__descr">
+                                <img src="assets/images/new/3.jpg" class="new__img" alt="Calathea Orbifolia">
+                                <button class="new__favorite"></button>
+                            </div>
+                            <div class="new__about">
+                                <div>
+                                    <h4 class="new__name">Calathea Orbifolia</h4>
+                                    <p class="new__text">Moist but well-drained</p>
+                                    <div class="new__price">₹102,056</div>
+                                </div>
+                                <a href="#" class="new__link">
+                                    <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__item">lorem</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
