--- a/src/index.html
+++ b/src/index.html
@@ -253,8 +253,72 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="swiper-slide new__item">lorem</div>
+                        <div class="swiper-slide new__item">
+                            <div class="new__descr">
+                                <img src="assets/images/new/4.jpg" class="new__img" alt="Mentha Divina">
+                                <button class="new__favorite"></button>
+                            </div>
+                            <div class="new__about">
+                                <div>
+                                    <h4 class="new__name">Mentha Divina</h4>
+                                    <p class="new__text">Moist but well-drained</p>
+                                    <div class="new__price">₹112,020</div>
+                                </div>
+                                <a href="#" class="new__link">
+                                    <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__item">
+                            <div class="new__descr">
+                                <img src="assets/images/new/5.jpg" class="new__img" alt="Begonia Maculata">
+                                <button class="new__favorite"></button>
+                            </div>
+                            <div class="new__about">
+                                <div>
+                                    <h4 class="new__name">Begonia Maculata</h4>
+                                    <p class="new__text">Moist but well-drained</p>
+                                    <div class="new__price">₹187,090</div>
+                                </div>
+                                <a href="#" class="new__link">
+                                    <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__item">
+                            <div class="new__descr">
+                                <img src="assets/images/new/6.jpg" class="new__img" alt="Caladium Bicolor">
+                                <button class="new__favorite"></button>
+                            </div>
+                            <div class="new__about">
+                                <div>
+                                    <h4 class="new__name">Caladium Bicolor</h4>
+                                    <p class="new__text">Moist but well-drained</p>
+                                    <div class="new__price">₹115,048</div>
+                                </div>
+                                <a href="#" class="new__link">
+                                    <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                                </a>
+                            </div>
+                        </div>
                     </div>
+                    <div class="swiper-slide new__item">
+                        <div class="new__descr">
+                            <img src="assets/images/new/7.jpg" class="new__img" alt="Podocarpus Macrophyllus">
+                            <button class="new__favorite"></button>
+                        </div>
+                        <div class="new__about">
+                            <div>
+                                <h4 class="new__name">Podocarpus Macrophyllus</h4>
+                                <p class="new__text">Moist but well-drained</p>
+                                <div class="new__price">₹142,081</div>
+                            </div>
+                            <a href="#" class="new__link">
+                                <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
         </section>
