add tablet and mobile media queries to section new

--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@
                         Instagram-worthy houseplants, pet-friendly plants, orchids and one-of-a-kind rare plants.
                     </p>
                 </div>
-                <div class="new__slider">
+                <div class="swiper new__slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
@@ -215,6 +215,22 @@
                                     <h4 class="new__name">Peperomia Plants</h4>
                                     <p class="new__text">Moist but well-drained</p>
                                     <div class="new__price">₹122,056</div>
+                                </div>
+                                <a href="#" class="new__link">
+                                    <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__item">
+                            <div class="new__descr">
+                                <img src="assets/images/new/7.jpg" class="new__img" alt="Podocarpus Macrophyllus">
+                                <button class="new__favorite"></button>
+                            </div>
+                            <div class="new__about">
+                                <div>
+                                    <h4 class="new__name">Podocarpus Macrophyllus</h4>
+                                    <p class="new__text">Moist but well-drained</p>
+                                    <div class="new__price">₹142,081</div>
                                 </div>
                                 <a href="#" class="new__link">
                                     <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
@@ -302,24 +318,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide new__item">
-                        <div class="new__descr">
-                            <img src="assets/images/new/7.jpg" class="new__img" alt="Podocarpus Macrophyllus">
-                            <button class="new__favorite"></button>
-                        </div>
-                        <div class="new__about">
-                            <div>
-                                <h4 class="new__name">Podocarpus Macrophyllus</h4>
-                                <p class="new__text">Moist but well-drained</p>
-                                <div class="new__price">₹142,081</div>
-                            </div>
-                            <a href="#" class="new__link">
-                                <img src="assets/images/icons/general/arrow-to-right-white.svg" alt="see product">
-                            </a>
-                        </div>
-                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
-                </div>
+            </div>
             </div>
         </section>
     </main>
