add section collection

--- a/src/index.html
+++ b/src/index.html
@@ -321,6 +321,57 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
+        </section>
+
+        <section class="collection">
+            <div class="container">
+                <h3 class="collection__title">Indoor Collection</h3>
+                <div class="collection__inner">
+                    <div class="collection__item">
+                        <a href="#" class="collection__link"></a>
+                        <div>
+                            <h4 class="collection__name">Philodendron</h4>
+                            <p class="collection__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue interdum ligula a
+                                dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis orci
+                                elementum egestas lobortis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collection__item">
+                        <a href="#" class="collection__link"></a>
+                        <div>
+                            <h4 class="collection__name">Calathea</h4>
+                            <p class="collection__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue interdum ligula a
+                                dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis orci
+                                elementum egestas lobortis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collection__item">
+                        <a href="#" class="collection__link"></a>
+                        <div>
+                            <h4 class="collection__name">Air Purifying</h4>
+                            <p class="collection__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue interdum ligula a
+                                dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis orci
+                                elementum egestas lobortis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collection__item">
+                        <a href="#" class="collection__link"></a>
+                        <div>
+                            <h4 class="collection__name">Low Light Tolerant</h4>
+                            <p class="collection__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue interdum ligula a
+                                dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis orci
+                                elementum egestas lobortis.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
