add tablet media queries to section collection

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/1.jpg" class="new__img" alt="Peperomia Plants">
-                                <button class="new__favorite"></button>
+                                <button class="new__favorite">add to favorite</button>
                             </div>
                             <div class="new__about">
                                 <div>
@@ -224,7 +224,7 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/7.jpg" class="new__img" alt="Podocarpus Macrophyllus">
-                                <button class="new__favorite"></button>
+                                <button class="new__favorite">add to favorite</button>
                             </div>
                             <div class="new__about">
                                 <div>
@@ -240,7 +240,7 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/2.jpg" class="new__img" alt="Fiddle-Leaf Fig">
-                                <button class="new__favorite"></button>
+                                <button class="new__favorite">add to favorite</button>
                             </div>
                             <div class="new__about">
                                 <div>
@@ -256,7 +256,7 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/3.jpg" class="new__img" alt="Calathea Orbifolia">
-                                <button class="new__favorite"></button>
+                                <button class="new__favorite">add to favorite</button>
                             </div>
                             <div class="new__about">
                                 <div>
@@ -272,7 +272,7 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/4.jpg" class="new__img" alt="Mentha Divina">
-                                <button class="new__favorite"></button>
+                                <button class="new__favorite">add to favorite</button>
                             </div>
                             <div class="new__about">
                                 <div>
@@ -288,7 +288,7 @@
                         <div class="swiper-slide new__item">
                             <div class="new__descr">
                                 <img src="assets/images/new/5.jpg" class="new__img" alt="Begonia Maculata">
-                                <button class="new__favorite"></button>
+                                <button class="new__favorite">add to favorite</button>
                             </div>
                             <div class="new__about">
                                 <div>
@@ -328,7 +328,7 @@
                 <h3 class="collection__title">Indoor Collection</h3>
                 <div class="collection__inner">
                     <div class="collection__item">
-                        <a href="#" class="collection__link"></a>
+                        <a href="#" class="collection__link">see more</a>
                         <div>
                             <h4 class="collection__name">Philodendron</h4>
                             <p class="collection__text">
@@ -339,7 +339,7 @@
                         </div>
                     </div>
                     <div class="collection__item">
-                        <a href="#" class="collection__link"></a>
+                        <a href="#" class="collection__link">see more</a>
                         <div>
                             <h4 class="collection__name">Calathea</h4>
                             <p class="collection__text">
@@ -350,7 +350,7 @@
                         </div>
                     </div>
                     <div class="collection__item">
-                        <a href="#" class="collection__link"></a>
+                        <a href="#" class="collection__link">see more</a>
                         <div>
                             <h4 class="collection__name">Air Purifying</h4>
                             <p class="collection__text">
@@ -361,7 +361,7 @@
                         </div>
                     </div>
                     <div class="collection__item">
-                        <a href="#" class="collection__link"></a>
+                        <a href="#" class="collection__link">see more</a>
                         <div>
                             <h4 class="collection__name">Low Light Tolerant</h4>
                             <p class="collection__text">
