add mobile queries to section collection

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
         <section class="new">
             <div class="container">
                 <div class="new__content">
-                    <h2>New Plants</h2>
+                    <h2 class="title">New Plants</h2>
                     <p>
                         Bring nature insider and shop our big selections of fresh indoor plants including
                         Instagram-worthy houseplants, pet-friendly plants, orchids and one-of-a-kind rare plants.
@@ -325,7 +325,7 @@
 
         <section class="collection">
             <div class="container">
-                <h3 class="collection__title">Indoor Collection</h3>
+                <h2 class="title">Indoor Collection</h2>
                 <div class="collection__inner">
                     <div class="collection__item">
                         <a href="#" class="collection__link">see more</a>
