add quality section

--- a/src/index.html
+++ b/src/index.html
@@ -374,6 +374,29 @@
                 </div>
             </div>
         </section>
+
+        <section class="quality">
+            <div class="container">
+                <h2 class="quality__title">
+                    Quality Plants and Curated Goods
+                </h2>
+                <p class="quality__text">
+                    We offer a carefully curated selection of indoor and outdoor plants, hand crafted home goods that
+                    put quality ahead of quantity, and living art made right here in the shop: terrariums, landscapes,
+                    arrangements, vessels, and holders.
+                </p>
+                <div class="quality__video">
+                    <video loading="lazy" poster="assets/images/quality/promo.svg">
+                        <source src="assets/mp4/quality.mp4" type="video/mp4">
+                        <p>Your browser does not support the video tag.</p>
+                    </video>
+                    <img class="quality__poster" src="assets/images/quality/promo.svg" alt="poster">
+                    <button class="quality__btn">
+                        <img src="assets/images/quality/play.svg" alt="play video">
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
