add faq section

--- a/src/index.html
+++ b/src/index.html
@@ -397,6 +397,72 @@
                 </div>
             </div>
         </section>
+
+        <section class="faq">
+            <div class="container">
+                <ul class="faq__list">
+                    <li>
+                        <div class="faq__question">
+                            <h4>Ordering for Delivery?</h4>
+                            <button class="faq__btn">
+                                <img src="assets/images/icons/faq/arrow-black.svg" alt="show answer">
+                            </button>
+                        </div>
+                        <p class="faq__answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolor
+                            cupiditate nihil aliquid? Dolorum ducimus soluta eos veniam accusamus est, officia totam
+                            possimus cum optio? Quam, quidem mollitia. Maiores, magni. Eum praesentium explicabo fugit
+                            molestiae minus aperiam sapiente dolorum error, ipsum quo eveniet animi nihil.
+                        </p>
+                    </li>
+
+                    <li>
+                        <div class="faq__question">
+                            <h4>Potting Services</h4>
+                            <button class="faq__btn">
+                                <img src="assets/images/icons/faq/arrow-black.svg" alt="show answer">
+                            </button>
+                        </div>
+                        <p class="faq__answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolor
+                            cupiditate nihil aliquid? Dolorum ducimus soluta eos veniam accusamus est, officia totam
+                            possimus cum optio? Quam, quidem mollitia. Maiores, magni. Eum praesentium explicabo fugit
+                            molestiae minus aperiam sapiente dolorum error, ipsum quo eveniet animi nihil.
+                        </p>
+                    </li>
+
+                    <li>
+                        <div class="faq__question">
+                            <h4>Do we Ship Plants?</h4>
+                            <button class="faq__btn">
+                                <img src="assets/images/icons/faq/arrow-black.svg" alt="show answer">
+                            </button>
+                        </div>
+                        <p class="faq__answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolor
+                            cupiditate nihil aliquid? Dolorum ducimus soluta eos veniam accusamus est, officia totam
+                            possimus cum optio? Quam, quidem mollitia. Maiores, magni. Eum praesentium explicabo fugit
+                            molestiae minus aperiam sapiente dolorum error, ipsum quo eveniet animi nihil.
+                        </p>
+                    </li>
+
+                    <li>
+                        <div class="faq__question">
+                            <h4>Ordering for Pick up?</h4>
+                            <button class="faq__btn">
+                                <img src="assets/images/icons/faq/arrow-black.svg" alt="show answer">
+                            </button>
+                        </div>
+                        <p class="faq__answer">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolor
+                            cupiditate nihil aliquid? Dolorum ducimus soluta eos veniam accusamus est, officia totam
+                            possimus cum optio? Quam, quidem mollitia. Maiores, magni. Eum praesentium explicabo fugit
+                            molestiae minus aperiam sapiente dolorum error, ipsum quo eveniet animi nihil.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
 </body>
